--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "holydayzer",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andregugelmin/holydayzer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/andregugelmin/holydayzer/issues"
+  },
+  "homepage": "https://github.com/andregugelmin/holydayzer#readme",
+  "description": ""
 }
