package json fix

--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "holydayzer",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andregugelmin/holydayzer.git"
-  },
-  "bugs": {
-    "url": "https://github.com/andregugelmin/holydayzer/issues"
-  },
-  "homepage": "https://github.com/andregugelmin/holydayzer#readme",
-  "description": ""
+    "name": "holydayzer",
+    "version": "1.0.0",
+    "type": "module",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.3"
+    }
 }
